--- a/features/typo_size/desc/Description.module.scss
+++ b/features/typo_size/desc/Description.module.scss
@@ -2,6 +2,11 @@
   max-width: 1000px;
   margin-left: 20px;
   display: block;
+  button {
+    margin: 0 auto;
+    width: 280px;
+    padding: 25px 0;
+  }
 
   &_models {
     text-align: right;
@@ -42,4 +47,6 @@
       }
     }
   }
+
+
 }
