--- a/features/typo_size/specification/Specification.module.scss
+++ b/features/typo_size/specification/Specification.module.scss
@@ -66,3 +66,67 @@
     }
   }
 }
+.specification_table2_box{
+  display: block;
+  max-height: 100%;
+  overflow: hidden;
+  transition: all 0.3s;
+  &_header{
+    border-collapse: collapse;
+    width: 100%;
+    &_title{
+      font-size: 12px;
+      border-style: solid;
+      border-width: 0 1px 0px 0;
+      border-color: white;
+      background: #CDCDC0;
+      &:first-child{
+        text-align: left;
+        padding-left: 20px;
+      }
+    }
+  }
+  &_table_container{
+    display: flex;
+    &_right_block{
+      width: 264px;
+      height: auto;
+      display: flex;
+      background: #DBE6D9;
+      &_item{
+        padding: 20px 10px;
+        text-align: center;
+        border-right: 1px solid rgba(0, 0, 0, 0.199);
+        &:first-child{
+          border-left: 1px solid rgba(0, 0, 0, 0.199);
+        }
+        &:last-child{
+          border-right: none;
+        }
+      }
+      &_line{
+        border-collapse: collapse;
+        border-spacing: 0;
+      }
+    }
+    &_gray{
+      width: 15px;
+      font-size: 12px;
+      border-style: solid;
+      border-width: 0 1px 1px 0;
+      border-color: white;
+      padding: 7px;
+      background: #B6AFAF;
+      color: #fff;
+    }
+    &_green{
+      width: 28px;
+      font-size: 12px;
+      border-style: solid;
+      border-width: 0 1px 1px 0;
+      background: #B2C9AC;
+      padding: 10px 25px;
+      color: #fff;
+    }
+  }
+}
