--- a/features/typo_size/typo_size.module.scss
+++ b/features/typo_size/typo_size.module.scss
@@ -1,6 +1,7 @@
 .typo_size_container{
   display: grid;
   grid-template-columns: 250px 1fr;
+  align-content: center;
   gap: 40px;
   padding-top: 40px;
   &_right{
