--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -113,6 +113,9 @@
   margin-top: 100px;
   gap: 40px;
   &_item{
+    &:hover img{
+      box-shadow: 0 0 17px #088122;
+    }
     position: relative;
     &_desc{
       font-size: 16px;
@@ -124,20 +127,23 @@
       transition: all 0.3s;
     }
     &_svg{
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 406px;
-      height: 309px;
-      overflow: hidden;
+
+      svg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 406px;
+        height: 309px;
+        overflow: hidden;
+        border-radius: 20px 0 0 0;
+      }
     }
   }
   img{
     width: 100%;
+    height: 330px;
+    object-fit: cover;
     border-radius: 20px;
     transition: all 0.3s;
-    &:hover{
-      box-shadow: 0 0 17px #088122;
-    }
   }
 }
