--- a/features/news/NewsPage/NewsPageItem.module.scss
+++ b/features/news/NewsPage/NewsPageItem.module.scss
@@ -64,7 +64,6 @@
       }
 
       h1 {
-        font-size: 40px;
         margin-bottom: 12px;
         font-size: 30px;
         line-height: 34px;
@@ -99,7 +98,7 @@
       overflow: hidden;
       transition: all 0.3s;
       &:hover {
-        box-shadow: 0px 0px 33px rgba(0, 146, 71, 0.3);
+        box-shadow: 0 0 33px rgba(0, 146, 71, 0.3);
         img {
           transform: scale(1.1);
         }
