--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -924,3 +924,27 @@
     }
   }
 }
+
+.zavodSlider__history {
+
+
+  &__items {}
+
+  &__slide {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #EBEBEB;
+    padding: 10px 40px;
+    font-size: 16px;
+    color: color(black);
+    text-align: center;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 0.3s;
+    position: relative;
+    &:hover {
+      background-color: #c8c8c8;
+    }
+  }
+}
