--- a/features/testpage/SliderContainer.module.scss
+++ b/features/testpage/SliderContainer.module.scss
@@ -1,3 +1,35 @@
 @import '../../styles/mixins.scss';
 @import '../../styles/variables.scss';
 
+// .slider__tabs {
+//   margin-top: 200px;
+
+//   &__items {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     gap: 10px;
+//   }
+
+//   &__item {
+//     background: #EBEBEB;
+//     padding: 10px 40px;
+//     font-size: 16px;
+//     color: color(black);
+//     text-align: center;
+//     border-radius: 3px;
+//     cursor: pointer;
+//     transition: all 0.3s;
+//     position: relative;
+//     &:hover {
+//       background-color: #c8c8c8;
+//     }
+//   }
+// }
+
+
+
+.zavod {
+  margin-top: 200px;
+
+}
