--- a/components/common/layout/Layout.module.scss
+++ b/components/common/layout/Layout.module.scss
@@ -1,12 +1,12 @@
 .header {
-  box-shadow: 0px 3px 5px rgb(30 158 0 / 90%);
+  box-shadow: 0 3px 5px rgb(30 158 0 / 90%);
   background-color: #fff;
-  position: fixed;
+  position: sticky;
   top: 0;
   width: 100%;
   z-index: 99;
 }
 
 .main{
-  margin-top: 100px;
+  margin-top: 80px;
 }
