--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -943,6 +943,10 @@
     cursor: pointer;
     transition: all 0.3s;
     position: relative;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
     &:hover {
       background-color: #c8c8c8;
     }
