--- a/components/common/header/Header.module.scss
+++ b/components/common/header/Header.module.scss
@@ -8,13 +8,20 @@
   top: 0;
   width: 100%;
   z-index: 99;
-
+  transition: all 0.3s;
   &__nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 35px 0;
-  
+    transition: all 0.3s;
+  &_active{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.3s;
+    padding: 15px 0;
+  }
      @media (max-width: 1200px) {
       padding: 25px 0 30px 0;
     }
