--- a/features/about/tab_who_we/Whowe.module.scss
+++ b/features/about/tab_who_we/Whowe.module.scss
@@ -26,3 +26,9 @@
     }
   }
 }
+.whowe_map_container{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+  position: relative;
+}
