--- a/features/news/NewsPage/NewsPageItem.module.scss
+++ b/features/news/NewsPage/NewsPageItem.module.scss
@@ -2,111 +2,190 @@
 @import '../../../styles/variables.scss';
 
 .news__active {
-  margin-top: 150px;
-  &__top {
-    display: flex;
-    align-items: flex-start;
-    gap: 40px;
-    margin-bottom: 1%;
-    @media (max-width: 1200px) {
-      flex-direction: column;
+
+  &__container {
+
+  }
+
+  &__img {
+    width: 100%;
+    height: 600px;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+    margin-bottom: 3%;
+    @include phoneScreen {
+      height: 300px;
     }
 
-    &__img {
-      width: 40%;
-      height: 500px;
-      border-radius: 10px;
-      overflow: hidden;
+    img {
+      object-fit: cover;
+      height: 100%;
+    }
+
+    span {
+      background-color: color(green);
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      position: absolute;
+      right: 0px;
+      bottom: 0px;
+      padding: 10px 20px;
+      border-radius: 8px 0 0 0;
+      p {
+        font-size: 18px;
+        font-weight: 400;
+        color: color(white);
+      }
+      
+      svg {
+        width: 20px;
+        height: 20px;
+        path {
+          fill: #fff;
+        }
+      }
+    }
+  }
+
+  &__info {
+    width: 100%;
+    margin-bottom: 5%;
+    h1 {
+      margin: 0 0 12px 12px;
+      font-size: 30px;
+      line-height: 34px;
+      letter-spacing: 0.025em;
+      color: color(green);
       position: relative;
-      @media (max-width: 1200px) {
-        width: 100%;
-        height: 500px;
+      &:before {
+        content: '';
+        position: absolute;
+        left: -12px;
+        top: 0;
+        width: 4px;
+        height: 100%;
+        background-color: color(green);
       }
 
       @include phoneScreen {
-        height: 300px;
-      }
-
-      img {
-        object-fit: cover;
-        height: 100%;
-      }
-
-      span {
-        background-color: color(green);
-        display: flex;
-        align-items: center;
-        gap: 8px;
-        position: absolute;
-        right: 0px;
-        bottom: 0px;
-        padding: 10px 20px;
-        border-radius: 8px 0 0 0;
-        p {
-          font-size: 18px;
-          font-weight: 400;
-          color: color(white);
-        }
-        svg {
-          width: 20px;
-          height: 20px;
-          path {
-            fill: #fff;
-          }
+        font-size: 30px;
+        &:before {
+          width: 3px;
         }
       }
     }
 
-    &__info {
-      width: 65%;
-      @media (max-width: 1200px) {
-        width: 100%;
+    p {
+      font-size: 15px;
+      line-height: 145%;
+      color: color(dark);
+    }
+  }
+
+  &__keyword {
+    margin-bottom: 4%;
+    h2 {
+      margin: 0 0 12px 12px;
+      font-size: 25px;
+      letter-spacing: 0.025em;
+      color: color(green);
+      position: relative;
+      &:before {
+        content: '';
+        position: absolute;
+        left: -12px;
+        top: 0;
+        width: 4px;
+        height: 100%;
+        background-color: color(green);
       }
 
-      h1 {
-        margin-bottom: 12px;
+      @include phoneScreen {
         font-size: 30px;
-        line-height: 34px;
+        &:before {
+          width: 3px;
+        }
+      }
+    }
+
+    &__paragraph {
+      display: flex;
+      flex-direction: column;
+      span {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 145%;
         letter-spacing: 0.025em;
         color: color(dark);
-        @include phoneScreen {
-          font-size: 30px;
-        }
-      }
-
-      p {
-        font-size: 15px;
-        line-height: 145%;
-        color: color(dark);
+        margin-bottom: 6px;
+        width: 100%;
+        position: relative;
+        // &:after {
+        //   content: '';
+        //   position: absolute;
+        //   left: 0;
+        //   bottom: 0;
+        //   width: 100%;
+        //   height: 1.5px;
+        //   background-color: color(green);
+        // }
       }
     }
   }
-  
-  &__subtext {
-    font-size: 15px;
-    line-height: 145%;
-    color: color(dark);
+
+  &__video {
+    width: 100%;
+    height: 650px;
+    overflow: hidden;
+    border-radius: 10px;
     margin-bottom: 3%;
+    @include phoneScreen {
+      height: 300px;
+    }
+    
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
-  &__bottom {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-    gap: 20px;
-    li {
-      border-radius: 10px;
-      overflow: hidden;
-      transition: all 0.3s;
-      &:hover {
-        box-shadow: 0 0 33px rgba(0, 146, 71, 0.3);
-        img {
-          transform: scale(1.1);
-        }
+  &__info__right {
+    width: 100%;
+    margin-bottom: 5%;
+    h1 {
+      margin: 0 12px 12px 0;
+      font-size: 30px;
+      text-align: right;
+      line-height: 34px;
+      letter-spacing: 0.025em;
+      color: color(green);
+      position: relative;
+      &:after {
+        content: '';
+        position: absolute;
+        right: -12px;
+        top: 0;
+        width: 4px;
+        height: 100%;
+        background-color: color(green);
       }
 
-      img {
-        transition: all 0.3s;
+      @include phoneScreen {
+        font-size: 30px;
+        &:before {
+          width: 3px;
+        }
       }
+    }
+
+    p {
+      font-size: 15px;
+      line-height: 145%;
+      color: color(dark);
+      text-align: right;
     }
   }
 }
