--- a/components/separator/Separator.module.scss
+++ b/components/separator/Separator.module.scss
@@ -2,15 +2,19 @@
 @import '../../styles/variables.scss';
 
 .separator{
-  margin: 80px 0 50px 0;
+  margin: 80px 0 20px 0;
   text-align: center;
   .separator_title{
     font-family: 'Ubuntu', sans-serif;
     font-style: normal;
     font-weight: 500;
     line-height: 57px;
+    font-size: 40px;
     letter-spacing: 0.015em;
     text-transform: uppercase;
     color: color(dark);
+    @include phoneScreen {
+      font-size: 30px;
+    }
   }
 }
