--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -8,10 +8,7 @@
   column-gap: 50px;
   padding-top: 40px;
   @media (max-width: 1270px) {
-    grid-template-rows: min-content min-content;
-    grid-column-gap: 50px;
-    grid-row-gap: 20px;
-    grid-template-columns: none;
+    display: block;
   }
 
   &_menu {
@@ -21,6 +18,10 @@
     box-shadow: 0 0px 28px #00000034;
     overflow: hidden;
     width: 100%;
+    @media (max-width: 1270px) {
+      margin-bottom: 7%;
+    }
+
     ul {
       background: #8B9C88;
       li {
@@ -59,7 +60,6 @@
       display: flex;
       align-items: center;
       line-height: 57px;
-
       svg {
         margin-right: 8px;
       }
@@ -76,18 +76,35 @@
     &_banner{
       border-radius: 20px;
       overflow: hidden;
-      margin-top: 20px;
+      margin: 0 0 30px 0;
+      @include phoneScreen {
+        height: 200px;
+        border-radius: 8px;
+        margin-bottom: 14px;
+      }
+
+      &:hover {
+        box-shadow: 0px 14px 30px rgba(39, 43, 39, 0.1);
+        img {
+          transform: scale(1.1);
+        }
+      }
+
+      img {
+        transition: all 0.3s;
+        object-fit: cover;
+      }
     }
     &_product {
       display: grid;
-      column-gap: 40px;
-      row-gap: 40px;
-      grid-template-columns: 1fr 1fr 1fr;
-      border-radius: 8px;
-      margin-top: 18px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px;
+      margin-bottom: 3%;
+      @include phoneScreen {
+        gap: 14px;
+      }
 
       &_a {
-
         overflow: hidden;
         border-radius: 8px;
         transition: all 0.2s;
@@ -96,11 +113,10 @@
         &:hover img {
           object-fit: contain;
           transform: scale(1.1);
-          box-shadow: 0 0 10px #212121;
         }
 
         &:hover {
-          box-shadow: 0 0 10px #212121;
+          box-shadow: 0px 14px 30px rgba(39, 43, 39, 0.1);
         }
 
         img {
@@ -122,7 +138,7 @@
     padding: 16px;
     transition: all 0.3s;
     cursor: pointer;
-    svg{
+    svg {
       margin-right: 12px;
 
     }
