--- a/features/typo_size/desc/Description.module.scss
+++ b/features/typo_size/desc/Description.module.scss
@@ -1,3 +1,7 @@
+@import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
+
+
 .Description_container {
   display: block;
 
@@ -20,6 +24,9 @@
         align-items: center;
         justify-content: center;
         transition: all 0.5s ease-out;
+        @include ipadScreen {
+          max-width: 100%;
+        }
 
         .photo {
           cursor: pointer;
@@ -221,11 +228,18 @@
     }
   }
 }
-.video{
+.video {
   width: 100%;
+  height: 530px;
   overflow: hidden;
   border-radius: 10px;
-  video{
+  @include phoneScreen {
+    height: 300px;
+  }
+  
+  video {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
