--- a/features/about/tab_who_we/map/Map.module.scss
+++ b/features/about/tab_who_we/map/Map.module.scss
@@ -2,8 +2,10 @@
 
   justify-content: center;
   flex-direction: column;
-  margin-bottom: 40px;
+
   position: relative;
+  max-width: 1100px;
+  margin: 0 auto 40px;
 
   .marker {
 
