--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -2,87 +2,16 @@
 @import '../../styles/variables.scss';
 
 .small300 {
-  .tabs__container {
-    max-width: 300px;
-    margin: 0 auto 50px;
-
-
-    &__menu {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      @media (max-width: 650px) {
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 15px;
-      }
-
-      li {
-        font-size: 18px;
-        padding: 0 0 15px 0;
-        cursor: pointer;
-        position: relative;
-        @media (max-width: 650px) {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 50px;
-          width: 100%;
-          background-color: color(green);
-          color: color(white);
-          border-radius: 5px;
-          font-size: 16px;
-          padding: 0;
-          &_active {
-            color: color(white);
-            background-color: color(green);
-          }
-        }
-      }
-    }
-
-    &__line {
-      width: 100%;
-      height: 5px;
-      background: rgba(0, 0, 0, .247);
-      border-radius: 5px;
-      cursor: pointer;
-
-      &_active {
-        color: color(green);
-
-        &:after {
-          content: "";
-          position: absolute;
-          bottom: -16%;
-          left: 0;
-          width: 100%;
-          height: 5px;
-          border-radius: 3px;
-          background: color(green);
-          @media (max-width: 650px) {
-            display: none;
-          }
-        }
-      }
-
-      @media (max-width: 650px) {
-        display: none;
-      }
-    }
-
-    &_context {
-      margin-top: 20px;
-    }
-  }
+  max-width: 300px;
 }
 .max {
   width: 100%;
-  .tabs__container {
-    margin: 0 auto 50px;
 
-    &__menu {
+}
+.tabs__container {
+  margin-bottom: 50px;
+  &__menu {
+    &.link {
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -91,6 +20,35 @@
         justify-content: center;
         align-items: center;
         gap: 15px;
+      }
+      &.line_fix {
+        width: 100%;
+        height: 5px;
+        background: rgba(0, 0, 0, .247);
+        border-radius: 5px;
+        cursor: pointer;
+
+        &_active {
+          color: color(green);
+
+          &:after {
+            content: "";
+            position: absolute;
+            bottom: -16%;
+            left: 0;
+            width: 100%;
+            height: 5px;
+            border-radius: 3px;
+            background: color(green);
+            @media (max-width: 650px) {
+              display: none;
+            }
+          }
+        }
+
+        @media (max-width: 650px) {
+          display: none;
+        }
       }
 
       li {
@@ -116,39 +74,80 @@
         }
       }
     }
-
-    &__line {
-      width: 100%;
-      height: 5px;
-      background: rgba(0, 0, 0, .247);
-      border-radius: 5px;
+    &.button {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       cursor: pointer;
+      column-gap: 20px;
 
-      &_active {
-        color: color(green);
+      @media (max-width: 650px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 15px;
+      }
+      &.line_fix {
+        width: 100%;
+        height: 5px;
+        background: rgba(0, 0, 0, .247);
+        border-radius: 5px;
+        cursor: pointer;
 
-        &:after {
-          content: "";
-          position: absolute;
-          bottom: -16%;
-          left: 0;
-          width: 100%;
-          height: 5px;
-          border-radius: 3px;
-          background: color(green);
-          @media (max-width: 650px) {
-            display: none;
+        &_active {
+          background-color: color(green);
+          color: white;
+          &:hover{
+            background-color: color(green);
+            color: white;
+            border: 1px solid color(green);
           }
+        }
+
+        @media (max-width: 650px) {
+          display: none;
         }
       }
 
-      @media (max-width: 650px) {
-        display: none;
+      li {
+        font-weight: normal;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 42px;
+        border:1px solid #009247;
+        border-radius: 5px;
+        color: #009247;
+        transition: all 0.3s;
+        &:hover{
+          background-color: #ececec;
+          border: 1px solid #ececec;
+          color: #212121;
+        }
+        @media (max-width: 650px) {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 50px;
+          width: 100%;
+          background-color: color(green);
+          color: color(white);
+          border-radius: 5px;
+          font-size: 16px;
+          padding: 0;
+          &_active {
+            color: color(white);
+            background-color: color(green);
+          }
+        }
       }
     }
+  }
 
-    &_context {
-      margin-top: 20px;
-    }
+
+
+  &_context {
+    margin-top: 20px;
   }
 }
