--- a/features/factory/FactoryItem.module.scss
+++ b/features/factory/FactoryItem.module.scss
@@ -4,8 +4,6 @@
 
 .factory__items {
 
- 
-
   &__top {
     margin-bottom: 50px;
     h1 {
@@ -28,8 +26,18 @@
     gap: 50px;
     padding-bottom: 50px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.363);
+    @include ipadScreen {
+      flex-direction: column;
+      gap: 20px;
+      padding-bottom: 20px;
+    }
+
     &__unfo {
       width: 55%;
+      @include ipadScreen {
+        width: 100%;
+      }
+
       h2 {
         font-weight: 400;
         font-size: 25px;
@@ -49,6 +57,10 @@
       width: 45%;
       overflow: hidden;
       border-radius: 10px;
+      @include ipadScreen {
+        width: 100%;
+      }
+
       img {
         width: 100%;
         height: 1px;
