--- a/features/factory/factorySlider/FactorySliderContainer.module.scss
+++ b/features/factory/factorySlider/FactorySliderContainer.module.scss
@@ -1,8 +1,7 @@
-@import '../../styles/mixins.scss';
-@import '../../styles/variables.scss';
+@import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
 
 
 .factory {
-
-position: relative;
+  margin-bottom: 80px;
 }
