--- a/components/map/Map.module.scss
+++ b/components/map/Map.module.scss
@@ -57,6 +57,9 @@
     &.belarus {
       transform: translate(-21px, -14px);
     }
+    &.tadjikistan {
+      transform: translate(-21px, -14px);
+    }
   }
 
 }
