--- a/components/map/Map.module.scss
+++ b/components/map/Map.module.scss
@@ -34,22 +34,25 @@
     transition: all 0.3s;
 
     &.russia {
-      path, polygon {
-        fill: #207812;
-        stroke: rgba(255, 255, 255, 0.4);
+      &:hover {
+        path, polygon {
+          fill: #50944E;
+          stroke: rgba(255, 255, 255, 0.1);
+        }
       }
 
-      &.depro {
-        transition: all 0.3s;
-
-        &:hover {
-          path,
-          polygon {
-            transition: all 0.3s;
-            fill: #50944E;
-            stroke: rgba(255, 255, 255, 0.1);
-          }
+      &.active {
+        path, polygon {
+          fill: #50944E;
+          stroke: rgba(255, 255, 255, 0.1);
         }
+      }
+
+      path,
+      polygon {
+        transition: all 0.3s;
+        fill: #207812;
+        stroke: rgba(255, 255, 255, 0.4);
       }
 
     }
@@ -57,6 +60,7 @@
     &.belarus {
       transform: translate(-21px, -14px);
     }
+
     &.tadjikistan {
       transform: translate(-21px, -14px);
     }
