--- a/components/tabs/Tabs.module.scss
+++ b/components/tabs/Tabs.module.scss
@@ -131,8 +131,8 @@
           align-items: center;
           height: 50px;
           width: 100%;
-          background-color: color(green);
-          color: color(white);
+          border:1px solid #009247;
+          color: color(green);
           border-radius: 5px;
           font-size: 16px;
           padding: 0;
