--- a/features/contacts/tab_sales_office/SalesOffice.module.scss
+++ b/features/contacts/tab_sales_office/SalesOffice.module.scss
@@ -1,6 +1,19 @@
-.sales_office_container{
+@import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
+
+.sales_office_container {
   max-width: 600px;
   display: flex;
   justify-content: center;
   margin: 0 auto;
+  &_items {
+    h1 {
+      font-size: 45px;
+      font-weight: 700;
+      color: color(dark);
+      text-align: center;
+      margin-bottom: 50px;
+    }
+  }
+
 }
