--- a/features/contacts/Contacts.module.scss
+++ b/features/contacts/Contacts.module.scss
@@ -9,12 +9,14 @@
     padding: 0 0 15px 0;
     border-radius: 10px;
     overflow: hidden;
+    background-color: rgb(245, 245, 245);
     transition: all 0.3s;
-    border-bottom: 5px solid transparent;
-&:hover{
-  box-shadow: 0px -1px 5px #000000;
-  border-color: #009247;
-}
+    &:hover {
+      box-shadow: 0px 0px 30px rgba(20, 20, 20, 0.3);
+      transform: translateY(-2px);
+      transition: all 0.3s;
+    }
+
     &_img {
       img {
         width: 100%;
