--- a/features/contacts/tab_sales_office/SalesOffice.module.scss
+++ b/features/contacts/tab_sales_office/SalesOffice.module.scss
@@ -17,3 +17,13 @@
   }
 
 }
+
+.yandex__map {
+  height: 500px;
+  width: 100%;
+  
+  [class*="copyrights-pane"] {
+    display: none !important;
+  }
+}
+
