--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -1,5 +1,60 @@
-.bim_container{
+.bim_container {
   display: flex;
   justify-content: center;
   margin: 0 auto;
 }
+
+.bim__items {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 20px;
+  padding: 0 0 8px 0;
+  margin-bottom: 80px;
+  &__item {
+    margin-bottom: 20px;
+    padding: 0 0 15px 0;
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: rgb(245, 245, 245);
+    transition: all 0.3s;
+    &:hover {
+      box-shadow: 0px 0px 30px rgba(20, 20, 20, 0.3);
+      transform: translateY(-2px);
+      transition: all 0.3s;
+    }
+  }
+
+  &__item__img {
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+  }
+
+  &__item__info {
+    
+    h1 {
+      color: #FFF;
+      text-align: center;
+      font-size: 18px;
+      font-weight: 400;
+      background: #3b9900;
+      padding: 15px 0;
+    }
+    
+    p {
+      font-weight: normal;
+      line-height: 150%;
+      color: #212121;
+      padding: 8px;
+      font-size: 16px;
+    }
+  }
+
+
+  
+}
+
