--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -67,3 +67,12 @@
   gap: 40px;
   justify-content: center;
 }
+.job_count{
+  border: 2px solid white;
+  padding: 10px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  color: white;
+  box-shadow: 0 0 2px 1px rgba(221, 221, 221, 1);
+}
