--- a/components/button/Button.module.scss
+++ b/components/button/Button.module.scss
@@ -96,10 +96,15 @@
 
     &_green {
       @extend %colorGreen;
+      @extend %largeSize;
+      width: 300px;
+
     }
 
     &_white {
       @extend %colorWhite;
+      @extend %largeSize;
+
     }
 
     &_link {
