--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -1,3 +1,6 @@
+@import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
+
 .bim_container {
   display: flex;
   justify-content: center;
@@ -6,7 +9,7 @@
 
 .bim__items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
   padding: 0 0 8px 0;
   margin-bottom: 80px;
@@ -17,10 +20,14 @@
     overflow: hidden;
     background-color: rgb(245, 245, 245);
     transition: all 0.3s;
+    cursor: pointer;
     &:hover {
-      box-shadow: 0px 0px 30px rgba(20, 20, 20, 0.3);
+      box-shadow: 0 0 30px rgba(20, 20, 20, 0.3);
       transform: translateY(-2px);
       transition: all 0.3s;
+      p{
+        color: #F89A00;
+      }
     }
   }
 
@@ -35,16 +42,16 @@
   }
 
   &__item__info {
-    
+
     h1 {
       color: #FFF;
       text-align: center;
       font-size: 18px;
       font-weight: 400;
-      background: #3b9900;
+      background: #F89A00;
       padding: 15px 0;
     }
-    
+
     p {
       font-weight: normal;
       line-height: 150%;
@@ -53,8 +60,10 @@
       font-size: 16px;
     }
   }
-
-
-  
 }
 
+.bim_banner{
+display: flex;
+  justify-content: center;
+  margin-bottom: 60px;
+}
