--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -3,3 +3,40 @@
   justify-content: center;
   margin: 0 auto;
 }
+
+.certificates__items {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 0 0 8px 0;
+  margin-bottom: 80px;
+  &__item {
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: rgb(245, 245, 245);
+    transition: all 0.3s;
+    cursor: pointer;
+    &:hover {
+      box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
+      transform: translateY(-2px);
+      transition: all 0.3s;
+    }
+  }
+
+  &__item__img {
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+    &:hover {
+      img {
+        transform: scale(1.1);
+      }
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
+      transition: all .3s;
+    }
+  }
+}
