--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -1,5 +1,108 @@
+@import '../../../styles/mixins.scss';
+@import '../../../styles/variables.scss';
+
 .catalog_container{
   display: flex;
   justify-content: center;
   margin: 0 auto;
+
+}
+.input_box{
+  display: flex;
+  position: relative;
+
+  svg{
+    position: absolute;
+    left: 5px;
+    top: 7px;
+    cursor: pointer;
+  }
+}
+
+.catalog_title {
+  display: flex;
+  justify-content: space-between;
+  h1 {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 30px;
+    font-weight: 500;
+    color: #212121;
+    width: 100%;
+  }
+  &:focus-within {
+    label {
+      transform: translateY(-30px) scale(1);
+      color: #6f81a5;
+    }
+  }
+  .input_field{
+    + label{
+      transform: translateY(-30px) scale(1) !important;
+    }
+    padding: 10px 10px 10px 30px;
+    border-radius: 5px;
+    border: 1px solid #9494949c;
+    width: 100%;
+    min-width: 300px;
+    transition: none;
+    &:-webkit-autofill {
+      & + label {
+        transform: translateY(0px) scale(1);
+      }
+    }
+    &:focus{
+    border: 1px solid color(green)
+    }
+  }
+  svg{
+    width: 22px;
+    height: 22px;
+    path{
+      fill: gray;
+    }
+  }
+}
+.catalog_box{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+  margin-top: 40px;
+  .box_item{
+    display: flex;
+    align-items: flex-start;
+    background-color: #f5f5f5;
+    padding: 0 18px 0 0;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: all 0.3s;
+    margin-bottom: 25px;
+    &__images{
+      width: 150px;
+      height: auto;
+      padding: 5px;
+      display: flex;
+      align-items: baseline;
+      img{
+        border-radius: 8px;
+      }
+    }
+    &__info{
+      margin-left: 25px;
+      padding: 10px 0;
+      &_title{
+        font-size: 16px;
+        color: #212121;
+        margin-bottom: 25px
+      }
+    }
+    &__item_button{
+      display: flex;
+      align-items: center;
+      p{
+        margin: 0 10px;
+        color: gray;
+      }
+    }
+  }
 }
