--- a/features/resources/tab_catalog/Catalog.module.scss
+++ b/features/resources/tab_catalog/Catalog.module.scss
@@ -7,14 +7,18 @@
   margin: 0 auto;
 
 }
-.input_box{
+.input_box {
   display: flex;
   position: relative;
+  input {
+    padding: 0 0 0 20px;
+  }
 
-  svg{
+  svg {
     position: absolute;
-    left: 5px;
+    left: 8px;
     top: 7px;
+    width: 19px !important;
     cursor: pointer;
   }
 }
@@ -40,7 +44,7 @@
     + label{
       transform: translateY(-30px) scale(1) !important;
     }
-    padding: 10px 10px 10px 30px;
+    padding: 10px 10px 10px 35px;
     border-radius: 5px;
     border: 1px solid #9494949c;
     width: 100%;
