--- a/features/resources/tab_questions/Questions.module.scss
+++ b/features/resources/tab_questions/Questions.module.scss
@@ -7,6 +7,54 @@
   margin: 0 auto;
 }
 
+.input_box {
+  margin: auto 0 20px auto;
+  width: 300px;
+  position: relative;
+
+  input {
+    padding: 0 0 0 20px;
+  }
+
+  svg {
+    position: absolute;
+    left: 8px;
+    top: 7px;
+    width: 19px !important;
+    cursor: pointer;
+  }
+
+  .input_field {
+    + label{
+      transform: translateY(-30px) scale(1) !important;
+    }
+    padding: 10px 10px 10px 35px;
+    border-radius: 5px;
+    border: 1px solid #9494949c;
+    width: 100%;
+    min-width: 300px;
+    transition: none;
+    &:-webkit-autofill {
+      & + label {
+        transform: translateY(0px) scale(1);
+      }
+    }
+    &:focus{
+    border: 1px solid color(green)
+    }
+    svg {
+      width: 22px;
+      height: 22px;
+      path{
+        fill: gray;
+      }
+    }
+  }
+}
+
+
+
+
 .faq__items__item {
   background: #f5f5f5;
   &__info {
