--- a/features/contacts/tab_sales_office/SalesOffice.module.scss
+++ b/features/contacts/tab_sales_office/SalesOffice.module.scss
@@ -5,7 +5,7 @@
   max-width: 600px;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  margin: 60px auto;
   &_items {
     h1 {
       font-size: 45px;
@@ -21,6 +21,7 @@
 .yandex__map {
   height: 500px;
   width: 100%;
+  margin-bottom: 40px;
   
   [class*="copyrights-pane"] {
     display: none !important;
