--- a/features/news/NewsPage/NewsPageItem.module.scss
+++ b/features/news/NewsPage/NewsPageItem.module.scss
@@ -2,10 +2,8 @@
 @import '../../../styles/variables.scss';
 
 .news__active {
-
-  &__container {
-
-  }
+margin-top: 60px;
+  margin-bottom: 40px;
 
   &__img {
     width: 100%;
