--- a/features/contacts/tab_interaction/Interaction.module.scss
+++ b/features/contacts/tab_interaction/Interaction.module.scss
@@ -2,7 +2,7 @@
   max-width: 600px;
   display: flex;
   justify-content: center;
-  margin: 0 auto;
+  margin: 60px auto;
   &_title {
     h1 {
       font-style: normal;
