--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -2,7 +2,7 @@
   max-width: 600px;
   display: flex;
   justify-content: center;
-  margin: 60px auto;
+  margin: 0 auto;
   flex-direction: column;
 }
 
