--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -15,7 +15,7 @@
     border-radius: 10px;
     height: max-content;
     background: color(white);
-    box-shadow: 0 0px 28px #00000034;
+    box-shadow: 0 0 28px #00000034;
     overflow: hidden;
     width: 100%;
     @media (max-width: 1270px) {
